tests/samples/negative/pointers/unsafe_strraw_required.ax
module unsafe_strraw_required;

fn main() -> i32 {
    let text: str = "ok";
    let raw: str = strraw(text.ptr, text.len);
    return ((raw.len) as i32);
}
